[project]
name = "uhd-builder"
version = "1.0.0"
description = "Automated UHD Python Wheel Builder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "requests",
    "mako",
    "ruamel.yaml",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "types-requests",
    "types-PyYAML",
    "cmake",
    "ninja",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"] # Pyflakes, pycodestyle, isort

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.uv.workspace]
members = [
    "test_uv",
    "uvt",
]
